name:                raaz-crypto-website
version:             0.1.0.0
synopsis:            The website of raaz cryptographic library.
-- description:
homepage:            https://github.com/raaz-crypto/raaz-crypto.github.io
license:             Apache-2.0
license-file:        LICENSE
author:              Piyush P Kurur
maintainer:          ppk@cse.iitk.ac.in
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable site
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
               ,       hakyll
  hs-source-dirs:      src
  default-language:    Haskell2010
